--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,6 +151,96 @@ header {
 }
 
 /*---------------------*/
+/* Login Modal */
+/*---------------------*/
+
+#login {
+    display: none;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.login-wrapper {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ffffff;
+    width: 40%;
+    height: 50%;
+    margin: 0 auto;
+    min-height: 25rem;
+    max-width: 38rem;
+    border-radius: 5px;
+}
+
+.login-close {
+    text-align: right;
+    padding-bottom: 2rem;
+}
+
+.login-close button {
+    font-size: 150%;
+    border: none;
+    width: 3rem;
+    height: 3rem;
+    background-color: #ffffff;
+    border-top-right-radius: 5px;
+    outline: none;
+}
+
+.login-close button:hover {
+    background-color: #ff4c4c;
+    color: #ffffff;
+    cursor: pointer;
+    border-bottom-left-radius: 5px;
+}
+
+.login-form {
+    width: 90%;
+    margin: 0 auto;
+}
+
+.login-form label {
+    display: block;
+    font-weight: bold;
+    padding: .5rem 0;
+}
+
+.login-form input {
+    display: block;
+    width: 100%;
+    border-style: none;
+    padding: .5rem;
+    margin-bottom: 1rem;
+    border-bottom: 1px solid #cccccc;
+    outline: none;
+    font-size: 80%;
+}
+
+.login-form button {
+    width: 100%;
+    padding: .7rem 0;
+    border-style: none;
+    outline: none;
+    background-color: #228ce6;
+    color: white;
+    font-size: 80%;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+.login-form button:hover {
+    cursor: pointer;
+    background-color: #229be6;
+}
+
+
+/*---------------------*/
 /* Learn More */
 /*---------------------*/
 
