--- a/public/css/style.css
+++ b/public/css/style.css
@@ -133,7 +133,7 @@ input[type="submit"]:active {
 /*---------------------*/
 
 header#home {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(images/water-background2.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(images/water-background2.png);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -159,6 +159,7 @@ nav#user {
 
 .hero-text-box h1 {
     font-size: 120%;
+    font-weight: 400;
 }
 
 .hero-text-box .btn {
